{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 305,
  "lineage": "77fc5aa4-7d19-6c61-b557-86bd5c074a8c",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "lb_global_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.120.87.213",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-06-09T07:04:24.098-07:00",
            "id": "projects/azimuthtv10-347408/global/addresses/az-global-appserver-ip",
            "name": "az-global-appserver-ip",
            "prefix_length": 0,
            "project": "azimuthtv10-347408",
            "self_link": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/global/addresses/az-global-appserver-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20220519",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/zones/europe-west3-b/disks/bastion-host"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/azimuthtv10-347408/zones/europe-west3-b/instances/bastion-host",
            "instance_id": "7213322221585939084",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "IAIRk5zlZvU=",
            "metadata_startup_script": "sudo apt-get update -y\nsudo apt-get install -y tinyproxy\n",
            "name": "bastion-host",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.207.168.216",
                    "network_tier": "STANDARD"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/global/networks/az-network",
                "network_ip": "10.10.10.14",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/regions/europe-west3/subnetworks/az-subnet",
                "subnetwork_project": "azimuthtv10-347408"
              }
            ],
            "project": "azimuthtv10-347408",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/zones/europe-west3-b/instances/bastion-host",
            "service_account": [
              {
                "email": "azimuth@azimuthtv10-347408.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": true,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh"
            ],
            "tags_fingerprint": "pfSjJj1RiUg=",
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "data.template_file.startup_script",
            "google_service_account.SA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/azimuthtv10-347408/global/routes/egress-internet",
            "name": "egress-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/global/networks/az-network",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "azimuthtv10-347408",
            "self_link": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/global/routes/egress-internet",
            "tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2022-06-09T07:04:35.997-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/azimuthtv10-347408/regions/europe-west3/routers/az-router",
            "name": "az-router",
            "network": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/global/networks/az-network",
            "project": "azimuthtv10-347408",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/regions/europe-west3/routers/az-router"
          },
          "dependencies": [
            "module.network.google_compute_network.az-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "azimuthtv10-347408/europe-west3/az-router/az-router-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "min_ports_per_vm": 0,
            "name": "az-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "azimuthtv10-347408",
            "region": "europe-west3",
            "router": "az-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_router.router",
            "module.network.google_compute_network.az-network"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_ssh",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-09T07:04:35.759-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/azimuthtv10-347408/global/firewalls/bastion-ssh",
            "log_config": [],
            "name": "bastion-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/global/networks/az-network",
            "priority": 1000,
            "project": "azimuthtv10-347408",
            "self_link": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/global/firewalls/bastion-ssh",
            "source_ranges": [
              "194.44.223.172/30"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.az-network"
          ]
        }
      ]
    },
    {
      "module": "module.http_https",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-09T07:04:35.771-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/azimuthtv10-347408/global/firewalls/allow-http-https",
            "log_config": [],
            "name": "allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/global/networks/az-network",
            "priority": 1000,
            "project": "azimuthtv10-347408",
            "self_link": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/global/firewalls/allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.az-network"
          ]
        }
      ]
    },
    {
      "module": "module.instances[\"vm1\"]",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vms",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20220519",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/zones/europe-west3-b/disks/vm1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/azimuthtv10-347408/zones/europe-west3-b/instances/vm1",
            "instance_id": "3186755459206627555",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "block-project-ssh-keys": "true",
              "enable-oslogin": "false",
              "ssh-keys": "    admin:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC9xQdGKRGXZGPWpDzhFukeu9anyva+Q7XkhCJcs6SAlu8QeuzsYwMbYuNwQOFOPzEeK5G6UTbaBMJ3NMXTrc3QwkVL2Wi+hQoPGK/kGvazxWtnpSzWcrksnYWeMo8il3BY+pXSOkuq0Yd8WmW6o+yMEV4x3ThsjtFzyGZ7Y2djTU8KqC3JL49USN+0w7bgAFtCGj4YqOR3z7e3NcdxZ49VCtZKFD3/d6zblbqepW5T8ht2PW2QSGb4nH7Nx+OeZuId2afogCoCFRHVQhMpHf6/IdnyaGGHqiwX+og81nEzGobTd42mGj4kdNBIwPAnpI3mACJLoHj75NB0ns10CRW1rWXxn0w1wzZmwA/TSjWGuieGpjSsvKcn/upoPmj6pDa7/I0jNVOhgSxjuqj/v98D995r7JkHPjOEkptZf37 [...]
            },
            "metadata_fingerprint": "xB8_eTs5W5E=",
            "metadata_startup_script": "#!/bin/bash\n      sudo set -euo pipefail\n\n      sudo export DEBIAN_FRONTEND=noninteractive\n      sudo yum update -y \u0026\u0026 yum upgrade -y\n      curl -L --output cloudflared.rpm https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-x86_64.rpm \u0026\u0026\n      sudo yum localinstall -y cloudflared.rpm \u0026\u0026\n      sudo cloudflared service install eyJhIjoiNDQ4ZWU4MGE1YzdhMWExZTcxZjkzMWZlZThjYzgyZTMiLCJ0IjoiYW [...]
            "name": "vm1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/global/networks/az-network",
                "network_ip": "10.10.10.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/regions/europe-west3/subnetworks/az-subnet",
                "subnetwork_project": "azimuthtv10-347408"
              }
            ],
            "project": "azimuthtv10-347408",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/zones/europe-west3-b/instances/vm1",
            "service_account": [
              {
                "email": "azimuth@azimuthtv10-347408.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh",
              "web"
            ],
            "tags_fingerprint": "-scOMTZb4lA=",
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "module.network.google_compute_network.az-network",
            "module.subnetwork.google_compute_subnetwork.az-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.instances[\"vm2\"]",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vms",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20220607",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/zones/europe-west3-b/disks/vm2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/azimuthtv10-347408/zones/europe-west3-b/instances/vm2",
            "instance_id": "3961545934244692195",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "block-project-ssh-keys": "true",
              "enable-oslogin": "false",
              "ssh-keys": "    root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC9xQdGKRGXZGPWpDzhFukeu9anyva+Q7XkhCJcs6SAlu8QeuzsYwMbYuNwQOFOPzEeK5G6UTbaBMJ3NMXTrc3QwkVL2Wi+hQoPGK/kGvazxWtnpSzWcrksnYWeMo8il3BY+pXSOkuq0Yd8WmW6o+yMEV4x3ThsjtFzyGZ7Y2djTU8KqC3JL49USN+0w7bgAFtCGj4YqOR3z7e3NcdxZ49VCtZKFD3/d6zblbqepW5T8ht2PW2QSGb4nH7Nx+OeZuId2afogCoCFRHVQhMpHf6/IdnyaGGHqiwX+og81nEzGobTd42mGj4kdNBIwPAnpI3mACJLoHj75NB0ns10CRW1rWXxn0w1wzZmwA/TSjWGuieGpjSsvKcn/upoPmj6pDa7/I0jNVOhgSxjuqj/v98D995r7JkHPjOEkptZf37l [...]
            },
            "metadata_fingerprint": "FhsADw6hnl0=",
            "metadata_startup_script": "#!/bin/bash\n      if [[ -f /home/scriptlog.txt ]]\n      then\n      exit\n            else\n\n      sudo set -euo pipefail\n\n      sudo export DEBIAN_FRONTEND=noninteractive\n      sudo apt-get update -y \u0026\u0026 apt-get update -y\n      curl -L --output cloudflared.deb https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb \u0026\u0026\n      sudo dpkg -i cloudflared.deb \u0026\u0026\n      sudo cloudflared s [...]
            "name": "vm2",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/global/networks/az-network",
                "network_ip": "10.10.10.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/regions/europe-west3/subnetworks/az-subnet",
                "subnetwork_project": "azimuthtv10-347408"
              }
            ],
            "project": "azimuthtv10-347408",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/zones/europe-west3-b/instances/vm2",
            "service_account": [
              {
                "email": "azimuth@azimuthtv10-347408.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh",
              "web"
            ],
            "tags_fingerprint": "-scOMTZb4lA=",
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "module.network.google_compute_network.az-network",
            "module.subnetwork.google_compute_subnetwork.az-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.instances_count[0]",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vms",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20220519",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/zones/europe-west3-b/disks/vm3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/azimuthtv10-347408/zones/europe-west3-b/instances/vm3",
            "instance_id": "4439173824005292259",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "block-project-ssh-keys": "true",
              "enable-oslogin": "false",
              "ssh-keys": "    admin:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC9xQdGKRGXZGPWpDzhFukeu9anyva+Q7XkhCJcs6SAlu8QeuzsYwMbYuNwQOFOPzEeK5G6UTbaBMJ3NMXTrc3QwkVL2Wi+hQoPGK/kGvazxWtnpSzWcrksnYWeMo8il3BY+pXSOkuq0Yd8WmW6o+yMEV4x3ThsjtFzyGZ7Y2djTU8KqC3JL49USN+0w7bgAFtCGj4YqOR3z7e3NcdxZ49VCtZKFD3/d6zblbqepW5T8ht2PW2QSGb4nH7Nx+OeZuId2afogCoCFRHVQhMpHf6/IdnyaGGHqiwX+og81nEzGobTd42mGj4kdNBIwPAnpI3mACJLoHj75NB0ns10CRW1rWXxn0w1wzZmwA/TSjWGuieGpjSsvKcn/upoPmj6pDa7/I0jNVOhgSxjuqj/v98D995r7JkHPjOEkptZf37 [...]
            },
            "metadata_fingerprint": "xB8_eTs5W5E=",
            "metadata_startup_script": "#!/bin/bash\n      sudo set -euo pipefail\n\n      sudo export DEBIAN_FRONTEND=noninteractive\n      sudo yum update -y \u0026\u0026 yum upgrade -y\n      curl -L --output cloudflared.rpm https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-x86_64.rpm \u0026\u0026\n      sudo yum localinstall -y cloudflared.rpm \u0026\u0026\n      sudo cloudflared service install eyJhIjoiNDQ4ZWU4MGE1YzdhMWExZTcxZjkzMWZlZThjYzgyZTMiLCJ0IjoiYW [...]
            "name": "vm3",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/global/networks/az-network",
                "network_ip": "10.10.10.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/regions/europe-west3/subnetworks/az-subnet",
                "subnetwork_project": "azimuthtv10-347408"
              }
            ],
            "project": "azimuthtv10-347408",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/zones/europe-west3-b/instances/vm3",
            "service_account": [
              {
                "email": "azimuth@azimuthtv10-347408.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh",
              "web"
            ],
            "tags_fingerprint": "-scOMTZb4lA=",
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "module.network.google_compute_network.az-network",
            "module.subnetwork.google_compute_subnetwork.az-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.instances_count[1]",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vms",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20220607",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/zones/europe-west3-b/disks/vm4"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/azimuthtv10-347408/zones/europe-west3-b/instances/vm4",
            "instance_id": "8108848728440062179",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "block-project-ssh-keys": "true",
              "enable-oslogin": "false",
              "ssh-keys": "    root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC9xQdGKRGXZGPWpDzhFukeu9anyva+Q7XkhCJcs6SAlu8QeuzsYwMbYuNwQOFOPzEeK5G6UTbaBMJ3NMXTrc3QwkVL2Wi+hQoPGK/kGvazxWtnpSzWcrksnYWeMo8il3BY+pXSOkuq0Yd8WmW6o+yMEV4x3ThsjtFzyGZ7Y2djTU8KqC3JL49USN+0w7bgAFtCGj4YqOR3z7e3NcdxZ49VCtZKFD3/d6zblbqepW5T8ht2PW2QSGb4nH7Nx+OeZuId2afogCoCFRHVQhMpHf6/IdnyaGGHqiwX+og81nEzGobTd42mGj4kdNBIwPAnpI3mACJLoHj75NB0ns10CRW1rWXxn0w1wzZmwA/TSjWGuieGpjSsvKcn/upoPmj6pDa7/I0jNVOhgSxjuqj/v98D995r7JkHPjOEkptZf37l [...]
            },
            "metadata_fingerprint": "FhsADw6hnl0=",
            "metadata_startup_script": "#!/bin/bash\n      if [[ -f /home/scriptlog.txt ]]\n      then\n      exit\n            else\n\n      sudo set -euo pipefail\n\n      sudo export DEBIAN_FRONTEND=noninteractive\n      sudo apt-get update -y \u0026\u0026 apt-get update -y\n      curl -L --output cloudflared.deb https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb \u0026\u0026\n      sudo dpkg -i cloudflared.deb \u0026\u0026\n      sudo cloudflared s [...]
            "name": "vm4",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/global/networks/az-network",
                "network_ip": "10.10.10.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/regions/europe-west3/subnetworks/az-subnet",
                "subnetwork_project": "azimuthtv10-347408"
              }
            ],
            "project": "azimuthtv10-347408",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/zones/europe-west3-b/instances/vm4",
            "service_account": [
              {
                "email": "azimuth@azimuthtv10-347408.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh",
              "web"
            ],
            "tags_fingerprint": "-scOMTZb4lA=",
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "module.network.google_compute_network.az-network",
            "module.subnetwork.google_compute_subnetwork.az-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend_http_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "RATE",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/zones/europe-west3-b/instanceGroups/az-webservers",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 100,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2022-06-09T07:05:40.804-07:00",
            "enable_cdn": false,
            "fingerprint": "FR9OxdpOJUk=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/global/healthChecks/az-healthcheck"
            ],
            "id": "projects/azimuthtv10-347408/global/backendServices/az-http-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "az-http-backend-service",
            "port_name": "http",
            "project": "azimuthtv10-347408",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/global/backendServices/az-http-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.lb.google_compute_instance_group.webservers",
            "module.network.google_compute_network.az-network",
            "module.subnetwork.google_compute_subnetwork.az-subnet",
            "module.instances.google_compute_instance.vms",
            "module.instances_count.google_compute_instance.vms",
            "module.lb.google_compute_health_check.healthcheck"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "global_forwarding_http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/azimuthtv10-347408/global/forwardingRules/az-global-forwarding-https-rule",
            "ip_address": "34.120.87.213",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "az-global-forwarding-https-rule",
            "port_range": "443",
            "project": "azimuthtv10-347408",
            "self_link": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/global/forwardingRules/az-global-forwarding-https-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/global/targetHttpsProxies/az-proxy"
          },
          "dependencies": [
            "module.lb.google_compute_health_check.healthcheck",
            "module.network.google_compute_network.az-network",
            "google_compute_global_address.lb_global_ip",
            "module.instances.google_compute_instance.vms",
            "module.instances_count.google_compute_instance.vms",
            "module.lb.google_compute_target_https_proxy.target_https_proxy",
            "module.lb.google_compute_url_map.url_map_http",
            "module.subnetwork.google_compute_subnetwork.az-subnet",
            "module.lb.google_compute_backend_service.backend_http_service",
            "module.lb.google_compute_instance_group.webservers",
            "module.lb.google_compute_ssl_certificate.ssl"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "target_https_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-09T07:06:14.739-07:00",
            "id": "projects/azimuthtv10-347408/global/targetHttpsProxies/az-proxy",
            "name": "az-proxy",
            "project": "azimuthtv10-347408",
            "proxy_bind": false,
            "proxy_id": 2865023307353964729,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/global/targetHttpsProxies/az-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/global/sslCertificates/az-certificate"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/global/urlMaps/az-load-balancer"
          },
          "dependencies": [
            "module.instances.google_compute_instance.vms",
            "module.lb.google_compute_url_map.url_map_http",
            "module.subnetwork.google_compute_subnetwork.az-subnet",
            "module.instances_count.google_compute_instance.vms",
            "module.lb.google_compute_backend_service.backend_http_service",
            "module.lb.google_compute_health_check.healthcheck",
            "module.lb.google_compute_instance_group.webservers",
            "module.lb.google_compute_ssl_certificate.ssl",
            "module.network.google_compute_network.az-network"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-09T07:06:02.995-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/global/backendServices/az-http-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "Gw-W3vzfr-I=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/azimuthtv10-347408/global/urlMaps/az-load-balancer",
            "map_id": 917966425640681637,
            "name": "az-load-balancer",
            "path_matcher": [],
            "project": "azimuthtv10-347408",
            "self_link": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/global/urlMaps/az-load-balancer",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb.google_compute_health_check.healthcheck",
            "module.lb.google_compute_instance_group.webservers",
            "module.network.google_compute_network.az-network",
            "module.subnetwork.google_compute_subnetwork.az-subnet",
            "module.instances.google_compute_instance.vms",
            "module.instances_count.google_compute_instance.vms",
            "module.lb.google_compute_backend_service.backend_http_service"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "az-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/azimuthtv10-347408/global/networks/az-network",
            "mtu": 0,
            "name": "az-network",
            "project": "azimuthtv10-347408",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/global/networks/az-network"
          }
        }
      ]
    },
    {
      "module": "module.ssh",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-09T07:04:35.697-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/azimuthtv10-347408/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/global/networks/az-network",
            "priority": 1000,
            "project": "azimuthtv10-347408",
            "self_link": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/global/firewalls/allow-ssh",
            "source_ranges": [
              "194.44.223.172/30"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.az-network"
          ]
        }
      ]
    },
    {
      "module": "module.subnetwork",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "az-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-09T07:04:36.636-07:00",
            "gateway_address": "10.10.10.1",
            "id": "projects/azimuthtv10-347408/regions/europe-west3/subnetworks/az-subnet",
            "ip_cidr_range": "10.10.10.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "az-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/global/networks/az-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "azimuthtv10-347408",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.101.0.0/16",
                "range_name": "gke-azimuthtv10-347408-gke-pods-5b7bdadd"
              },
              {
                "ip_cidr_range": "10.102.0.0/16",
                "range_name": "gke-azimuthtv10-347408-gke-services-5b7bdadd"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/azimuthtv10-347408/regions/europe-west3/subnetworks/az-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.az-network"
          ]
        }
      ]
    }
  ]
}